# monocypher

./: .gitignore  CMakeLists.txt  Package.swift
src/: CMakeLists.txt
